--- a/src/main/webapp/css/branches.css
+++ b/src/main/webapp/css/branches.css
@@ -111,7 +111,7 @@ nav .menu {
 
 /* Table Styles */
 table {
-	width: 100%;
+	width: 1400px;
 	border-collapse: collapse;
 	margin-bottom: 20px;
 }
@@ -182,4 +182,46 @@ footer {
 	position: fixed;
 	width: 100%;
 	bottom: 0;
+}
+
+.cart {
+  position: fixed; /* 화면에 고정 */
+  top: 200px; /* 상단 여백 */
+  right: 20px; /* 오른쪽 여백 */
+  width: 600px; /* 장바구니 너비 */
+  background-color: #ffffff; /* 배경색 */
+  border: 1px solid #cccccc; /* 테두리 */
+  padding: 10px; /* 내부 여백 */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+  z-index: 1000; /* 다른 요소 위에 나타나도록 설정 */
+}
+
+/* 장바구니 내용에 스크롤이 필요한 경우 */
+.cart-content {
+  max-height: 700px; /* 최대 높이 설정 */
+  overflow-y: auto; /* 세로 스크롤 표시 */
+}
+.cart table {
+	width: 100%;
+}
+
+.cart2 {
+  position: fixed; /* 화면에 고정 */
+  top: 88%; /* 상단 여백 */
+  right: 20px; /* 오른쪽 여백 */
+  width: 600px; /* 장바구니 너비 */
+  background-color: #ffffff; /* 배경색 */
+  border: 1px solid #cccccc; /* 테두리 */
+  padding: 10px; /* 내부 여백 */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+  z-index: 1000; /* 다른 요소 위에 나타나도록 설정 */
+}
+
+/* 장바구니 내용에 스크롤이 필요한 경우 */
+.cart-content2 {
+  max-height: 700px; /* 최대 높이 설정 */
+  overflow-y: auto; /* 세로 스크롤 표시 */
+}
+.cart table2 {
+	width: 100%;
 }
