--- a/src/main/webapp/css/branches.css
+++ b/src/main/webapp/css/branches.css
@@ -111,7 +111,7 @@ nav .menu {
 
 /* Table Styles */
 table {
-	width: 1400px;
+	width: 60%;
 	border-collapse: collapse;
 	margin-bottom: 20px;
 }
@@ -188,7 +188,7 @@ footer {
   position: fixed; /* 화면에 고정 */
   top: 200px; /* 상단 여백 */
   right: 20px; /* 오른쪽 여백 */
-  width: 600px; /* 장바구니 너비 */
+  width: 38%; /* 장바구니 너비 */
   background-color: #ffffff; /* 배경색 */
   border: 1px solid #cccccc; /* 테두리 */
   padding: 10px; /* 내부 여백 */
@@ -198,7 +198,7 @@ footer {
 
 /* 장바구니 내용에 스크롤이 필요한 경우 */
 .cart-content {
-  max-height: 700px; /* 최대 높이 설정 */
+  max-height: 550px; /* 최대 높이 설정 */
   overflow-y: auto; /* 세로 스크롤 표시 */
 }
 .cart table {
@@ -207,9 +207,9 @@ footer {
 
 .cart2 {
   position: fixed; /* 화면에 고정 */
-  top: 88%; /* 상단 여백 */
+  top: 86%; /* 상단 여백 */
   right: 20px; /* 오른쪽 여백 */
-  width: 600px; /* 장바구니 너비 */
+  width: 35%; /* 장바구니 너비 */
   background-color: #ffffff; /* 배경색 */
   border: 1px solid #cccccc; /* 테두리 */
   padding: 10px; /* 내부 여백 */
@@ -219,7 +219,7 @@ footer {
 
 /* 장바구니 내용에 스크롤이 필요한 경우 */
 .cart-content2 {
-  max-height: 700px; /* 최대 높이 설정 */
+  max-height: 400px; /* 최대 높이 설정 */
   overflow-y: auto; /* 세로 스크롤 표시 */
 }
 .cart table2 {
