--- a/src/main/webapp/css/branches.css
+++ b/src/main/webapp/css/branches.css
@@ -327,3 +327,60 @@ footer {
     text-decoration: none;
     cursor: pointer;
 }
+
+
+/* 여기부터 중요함 살려야 함  stock out form*/
+.comments-section {
+            margin-top: 10px;
+}
+.comment-box {
+	width: 100%;
+	height: 60px;
+	margin-bottom: 10px;
+}
+.comment-box:disabled {
+	background-color: #f0f0f0; /* 비활성화된 상태의 배경 색상 */
+}
+
+.modal {
+	display: none; /* 기본적으로 숨김 */
+	position: fixed;
+	z-index: 1000;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px; /* 모달 창의 최대 너비 (변경 가능) */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+    border-radius: 8px; /* 둥근 모서리 */
+    position: relative; /* 자식 요소의 절대 위치에 영향을 주기 위해 */
+    max-height: 50vh;
+    overflow-y: auto; /* 세로 스크롤 */
+}
+.modal-body {
+    max-height: calc(80vh - 100px); /* 최대 높이 (모달 창 높이에서 버튼 높이 차감) */
+    overflow-y: auto; /* 세로 스크롤 */
+    margin-bottom: 20px; /* 버튼과의 거리 */
+}
+.close {
+	color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+	color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
